--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "rest-anime-api",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Slavyasanek.github.io/Rest-Anime-API",
+  "homepage": "https://slavyasanek.github.io/Rest-Anime-API",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /Rest-Anime-API/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Slavyasanek/Rest-Anime-API.git"
+    "url": "git+https://github.com/slavyasanek/Rest-Anime-API.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Slavyasanek/Rest-Anime-API/issues"
+    "url": "https://github.com/slavyasanek/Rest-Anime-API/issues"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0"
